fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 
 body.appear-entry {
   transform: translateY(40vh);
-  transition: 1s cubic-bezier(.85,-0.01,.21,1);
+  transition: 1.4s cubic-bezier(.85,-0.01,.21,1);
   overflow: hidden;
 }
 
@@ -37,7 +37,7 @@ body.appear-entry::before {
   transform: translateY(-40vh);
   background-color: var(--color);
   z-index: 10000;
-  transition: 1s cubic-bezier(.85,-0.01,.21,1);
+  transition: 1.1s cubic-bezier(.85,-0.01,.21,1);
 }
 
 body.appear-entry-loaded {
@@ -45,8 +45,8 @@ body.appear-entry-loaded {
 }
 
 body.appear-entry-loaded::before {
-  height: 0vh;
-  transform: translateY(0vh);
+  height: 40vh;
+  transform: translateY(-40vh);
 }
 
 a {
@@ -238,6 +238,8 @@ ul.design-specialty-list {
 }
 .title-line img {
   opacity: 1 !important;
+  width: auto;
+  height: 100%;
 }
 
 canvas {
